[gd_scene load_steps=3 format=3 uid="uid://becnmmqtfxs0t"]

[ext_resource type="Script" uid="uid://yiawhsl0epcj" path="res://scripts/moving_platform.gd" id="1_1tdcd"]
[ext_resource type="Texture2D" uid="uid://b4ijpjfpcbp5r" path="res://textures/moving-platform_medium.png" id="1_ms375"]

[node name="MovingPlatform" type="Node2D"]
script = ExtResource("1_1tdcd")

[node name="AnimatedBody" type="AnimatableBody2D" parent="."]

[node name="Collision" type="CollisionPolygon2D" parent="AnimatedBody"]
polygon = PackedVector2Array(-16, -8, 16, -8, 16, 1, 9, 8, -9, 8, -16, 1)

[node name="Sprite" type="Sprite2D" parent="AnimatedBody"]
texture = ExtResource("1_ms375")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-240, -135, 480, 270)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
